Fix IFC switch parsing + remove ClientID + prepare get upload status
